更新目录和优化入门文档

--- a/用户指南/01.入门.md
+++ b/用户指南/01.入门.md
@@ -4,9 +4,10 @@
 
 PHPStan 要求 PHP >= 7.2， 你必须在 PHP 7.x 的环境下运行它，但实际代码不需要使用 PHP 7.x 特性。（在 PHP 5.6 和更早版本写下的代码都可以不大改地运行在 7.x 版本。）
 
-PHPStan 最适用于现代面向对象的代码。你的代码越是**强类型**的，PHPStan 就能收集更多的信息去工作。
+PHPStan 最适用于现代面向对象的代码。你的代码越是**强类型**的，PHPStan 越能收集更多的信息去工作。
 
 有着正确注释和类型提示的代码 (类属性、函数和方法参数、返回类型) 不仅能帮助静态分析工具，还能帮助其他使用这段代码的人理解它。
+
 安装
 -------------
 
@@ -18,9 +19,9 @@ composer require --dev phpstan/phpstan
 
 Composer 会在 `vendor/bin` (默认) 目录安装它的可执行文件。
 
-你也可以下载使用 [最新版本的 PHAR](https://github.com/phpstan/phpstan/releases) 。 但是不用 Composer，你将无法使用和安装 [PHPStan extensions](/user-guide/extension-library)。
+你也可以下载使用 [最新版本的 PHAR](https://github.com/phpstan/phpstan/releases) 。 但是不用 Composer，你将无法使用和安装 [PHPStan 扩展](用户指南/11.扩展库.md)。
 
-如果你想在 Docker 中使用 PHPStan，[点这里](/user-guide/docker) .
+如果你想在 Docker 中使用 PHPStan，[点这里](https://phpstan.org/user-guide/docker)。
 
 第一次运行
 -------------
@@ -34,19 +35,19 @@ vendor/bin/phpstan analyse src tests
 ```
 
 >你应该只分析你自己写的代码。不需要去分析第三方的 `vendor` 目录，因为解决第三方的所有错误，并非你应该做的。
+>
+>是的， PHPStan 需要了解你代码所使用的所有 classes、interfaces、traits，但是这是通过 [定位符号](用户指南/05.定位符号.md) 实现的，而不是在分析中引入那些文件。
 
->是的， PHPStan 需要了解你代码所使用的所有 classes、interfaces、traits，但是这是通过 [discovering symbols](/user-guide/discovering-symbols) 实现的，而不是在分析中 including 那些文件。
 
-
-[了解关于命令行的更多信息 »](/user-guide/command-line-usage)
+[了解关于命令行的更多信息 »](用户指南/02.命令行用法.md)
 
 PHPStan 可能会发现一些错误，但是不用担心，你的代码可能没问题。第一次运行发现的错误往往是：
 
 * 传递给函数多余的参数 (例如，函数需要2个参数，传了3个)
 * 传递给 print/sprintf 函数多余的参数 (例如，格式字符串包含1个占位符，给了2个去替换)
 * Dead Code 中的明显错误。
-* 未知的Symbols - 例如 "class not found"。在 [Discovering Symbols](/user-guide/discovering-symbols) 查看更多详情。
+* 未知的符号 - 例如 "class not found"。在 [定位符号](用户指南/05.定位符号.md) 查看更多详情。
 
-**默认情况下，PHPStan 只做最基本的检查。去 [Rule Levels](/user-guide/rule-levels) 了解更多关于如何开启严格检查。**
+**默认情况下，PHPStan 只做最基本的检查。去 [规则级别](用户指南/03.规则级别.md) 了解更多关于如何开启严格检查。**
 
-**在 [Config Reference](/config-reference) 了解所有的配置项。**
+**在 [配置参考](https://phpstan.org/config-reference) 了解所有的配置项。**
