--- a/用户指南/01.入门.md
+++ b/用户指南/01.入门.md
@@ -19,7 +19,7 @@ composer require --dev phpstan/phpstan
 
 Composer 会在 `vendor/bin` (默认) 目录安装它的可执行文件。
 
-你也可以下载使用 [最新版本的 PHAR](https://github.com/phpstan/phpstan/releases) 。 但是不用 Composer，你将无法使用和安装 [PHPStan 扩展](用户指南/11.扩展库.md)。
+你也可以下载使用 [最新版本的 PHAR](https://github.com/phpstan/phpstan/releases) 。 但是不用 Composer，你将无法使用和安装 [PHPStan 扩展](/用户指南/11.扩展库.md)。
 
 如果你想在 Docker 中使用 PHPStan，[点这里](https://phpstan.org/user-guide/docker)。
 
