--- a/用户指南/01.入门.md
+++ b/用户指南/01.入门.md
@@ -36,18 +36,18 @@ vendor/bin/phpstan analyse src tests
 
 >你应该只分析你自己写的代码。不需要去分析第三方的 `vendor` 目录，因为解决第三方的所有错误，并非你应该做的。
 >
->是的， PHPStan 需要了解你代码所使用的所有 classes、interfaces、traits，但是这是通过 [定位符号](用户指南/05.定位符号.md) 实现的，而不是在分析中引入那些文件。
+>是的， PHPStan 需要了解你代码所使用的所有 classes、interfaces、traits，但是这是通过 [定位符号](/用户指南/05.定位符号.md) 实现的，而不是在分析中引入那些文件。
 
 
-[了解关于命令行的更多信息 »](用户指南/02.命令行用法.md)
+[了解关于命令行的更多信息 »](/用户指南/02.命令行用法.md)
 
 PHPStan 可能会发现一些错误，但是不用担心，你的代码可能没问题。第一次运行发现的错误往往是：
 
 * 传递给函数多余的参数 (例如，函数需要2个参数，传了3个)
 * 传递给 print/sprintf 函数多余的参数 (例如，格式字符串包含1个占位符，给了2个去替换)
 * Dead Code 中的明显错误。
-* 未知的符号 - 例如 "class not found"。在 [定位符号](用户指南/05.定位符号.md) 查看更多详情。
+* 未知的符号 - 例如 "class not found"。在 [定位符号](/用户指南/05.定位符号.md) 查看更多详情。
 
-**默认情况下，PHPStan 只做最基本的检查。去 [规则级别](用户指南/03.规则级别.md) 了解更多关于如何开启严格检查。**
+**默认情况下，PHPStan 只做最基本的检查。去 [规则级别](/用户指南/03.规则级别.md) 了解更多关于如何开启严格检查。**
 
 **在 [配置参考](https://phpstan.org/config-reference) 了解所有的配置项。**
