更新定位符号文档

--- a/用户指南/05.定位符号.md
+++ b/用户指南/05.定位符号.md
@@ -2,9 +2,9 @@
 定位符号
 ---
 
-PHPStan 需要定位代码库里的符号（类，函数，常量)。默认情况下，在以下两处：
+PHPStan 需要定位代码库里的符号（类，函数，常量）。默认情况下，在以下两处可以找到：
 
-* 在 [命令行参数](/user-guide/command-line-usage) 或者 [配置文件](/config-reference#analysed-files) 中使用的路径（文件或者目录）。
+* 在 [命令行参数](/用户指南/02.命令行用法.md) 或者 [配置文件](https://phpstan.org/config-reference#analysed-files) 中使用的路径（文件或者目录）。
 * 项目里的 Composer 依赖项。
 
 这涵盖了大部分情况。
@@ -29,11 +29,12 @@ parameters:
 全局常量
 ---------------------------
 
-从 [PHPStan 1.7.0](https://github.com/phpstan/phpstan/releases/tag/1.7.0) 开始，使用全局常量分析代码无需任何特殊要求。
+从 [PHPStan 1.7.0](https://github.com/phpstan/phpstan/releases/tag/1.7.0) 开始，分析带有全局常量的代码无需任何特殊要求。
 
-老版 PHPStan 的过时说明：
-    
-分析代码中使用的全局常量需要在引导文件中定义。
+<details>
+    <summary class="text-blue-500 font-bold">老版 PHPStan 的说明：</summary>
+ 
+代码中使用的全局常量需要在引导文件中定义。
 
 创建一个类似这样的文件：
 
@@ -43,7 +44,7 @@ parameters:
 define('MY_CONSTANT', 1);
 ```
 
-并把它添加到你的 [配置文件](/config-reference):
+并把它添加到你的 [配置文件](https://phpstan.org/config-reference):
 
 ```yaml
 parameters:
@@ -52,6 +53,7 @@ parameters:
 ```
 
 请注意，引导文件在 PHP 实际运行时执行。
+</details>
 
 
 类的别名
@@ -67,7 +69,7 @@ parameters:
 class_alias(\Foo::class, 'Bar');
 ```
 
-并把它添加到你的 [配置文件](/config-reference):
+并把它添加到你的 [配置文件](https://phpstan.org/config-reference):
 
 ```yaml
 parameters:
@@ -80,11 +82,11 @@ parameters:
 自定义的自动加载器
 ---------------------------
 
-如果您使用的不是 Composer 中的自动加载器，PHPStan 可以利用它来发现具有自动加载类的文件。
+如果您使用的不是 Composer 中的自动加载器，PHPStan 也可以利用它来发现具有自动加载类的文件。
 
 您可以通过两种方式注册自定义自动加载器：
 
-1) 通过 [`--autoload-file|-a`](/user-guide/command-line-usage#--autoload-file|-a) 参数传递注册自动加载器的 PHP 文件。
+1) 通过 [`--autoload-file|-a`](/用户指南/02.命令行用法.md#--autoload-file|-a) 参数传递注册自动加载器的 PHP 文件。
 2) 通过使用 `bootstrapFiles` 选项：
 
 ```yaml
