--- a/用户指南/06.输出格式.md
+++ b/用户指南/06.输出格式.md
@@ -2,7 +2,7 @@
 输出格式
 ---
 
-通过各种所谓的报错格式器，PHPStan 支持不同的输出格式。
+通过各种所谓的报错格式器(error formatter)，PHPStan 支持不同的输出格式。
 
 你可以按照以下关键词给 `analyse` 命令传 `--error-format=X` 以控制输出：
 
@@ -10,20 +10,20 @@
 - `raw`: 每行显示一个错误信息，包括文件路径、行号和错误描述。
 - `checkstyle`: 创建一个和 checkstyle.xml 兼容的输出。注意你必须把输出信息重定向到一个文件，以便接下来处理报错。
 - `json`: 创建一个没有空格的 json 压缩文件。注意你必须把输出信息重定向到一个文件，以便接下来处理报错。
-- `prettyJson`: 创建一个人类可读的带有空格和缩进的 json 输出。 注意你必须把输出信息重定向到一个文件，以便接下来处理报错。
+- `prettyJson`: 创建一个人类可读的带有空格和缩进的 json 输出。注意你必须把输出信息重定向到一个文件，以便接下来处理报错。
 - `junit`: 创建一个和 JUnit 兼容的输出。注意你必须把输出信息重定向到一个文件，以便接下来处理报错。
 - `github`: 创建一个和 GitHub Actions 兼容的输出。
-- `gitlab`: 创建一个用于在 GitLab 上 处理合并请求(Merge Request)时的代码质量小部件的格式。
+- `gitlab`: 创建一个格式，它用于 GitLab Merge Request 上的代码质量(Code Quality)小部件(widget)。
 - `teamcity`: 创建一个和 TeamCity 兼容的输出。
 
-你也可以实现你自定义的报错格式器。 [了解更多 »](/developing-extensions/error-formatters)
+你也可以实现你自定义的报错格式器。 [了解更多 »](https://phpstan.org/developing-extensions/error-formatters)
 
-你可以在配置里改变默认的报错格式。 [Learn how »](/config-reference#errorformat)
+你可以在配置里改变默认的报错格式。 [了解更多 »](https://phpstan.org/config-reference#errorformat)
 
 在编辑器里打开文件
 --------------
 
-默认的 `table` 格式有一个配置参数 `editorUrl`，它可以让你指定一个带有占位符的 URL ，这个 URL 会被打印在错误信息旁。
+默认的 `table` 格式有一个配置参数 `editorUrl`，它可以让你指定一个带有占位符的 URL，这个 URL 会被打印在错误信息旁。
 
 ```
  ------ -------------------------------------------------------------------
@@ -34,7 +34,7 @@
  ------ -------------------------------------------------------------------
 ```
 
-也可以在 [配置文件](/config-reference) 里这么设置：
+也可以在 [配置文件](https://phpstan.org/config-reference) 里这么设置：
 
 ```neon
 parameters:
@@ -47,7 +47,7 @@ parameters:
 * Visual Studio Code: `'vscode://file/%%file%%:%%line%%'`
 * Atom: `'atom://core/open/file?filename=%%file%%&line=%%line%%'`
 
-这个参数最有可能在 [你的本地配置文件](/config-reference#multiple-files) 里设置，这样它不会被提交到版本库里。常见模式是把特定项目的 `phpstan.neon.dist` 分享给项目里的所有人, 并把包括 `phpstan.neon.dist` 的 `phpstan.neon` 添加到 *.gitignored* 文件，然后每个开发者自己指定这个参数。
+这个参数最有可能在 [你的本地配置文件](https://phpstan.org/config-reference#multiple-files) 里设置，这样它不会被提交到版本库里。常见模式是把特定项目的 `phpstan.neon.dist` 分享给项目里的所有人, 并把包括 `phpstan.neon.dist` 的 `phpstan.neon` 添加到 *.gitignored* 文件，然后每个开发者自己指定这个参数。
 
 ```neon
 includes:
@@ -59,8 +59,8 @@ parameters:
 
 为了使文本在你的终端里真的可以点击，你可能需要在系统里注册协议；有关示例参见 [eclemens/atom-url-handler](https://github.com/eclemens/atom-url-handler) 。
 
-在 PHPStan 1.7.15 可用
+>在 PHPStan 1.7.15 可用
 
-如果你在 Docker（或其他虚拟化工具) 里运行 PHPStan，你可能需要使用 `%relFile%` 而不是 `%file%`。 这将基于当前工作目录使用文件。 `editorUrl` 后面应该类似于： `phpstorm://open?file=/path/to/your/project/%%relFile%%&line=%%line%%`。
+如果你在 Docker（或其他虚拟化工具) 里运行 PHPStan，你可能需要使用 `%relFile%` 而不是 `%file%`。这将基于当前工作目录使用文件。`editorUrl` 后面应该类似于：`phpstorm://open?file=/path/to/your/project/%%relFile%%&line=%%line%%`。
 
-因为相同项目下的团队成员可能有不同的项目绝对路径，常见项目的设置里，特定机器的 `phpstan.neon` 的 `editorUrl` 参数应该和 [`phpstan.neon.dist` 配对使用](/config-reference#multiple-files)。
+因为相同项目下的团队成员可能有不同的项目绝对路径，在常见项目的设置里，特定机器的 `phpstan.neon` 的 `editorUrl` 参数应该和 [`phpstan.neon.dist` 配合使用](https://phpstan.org/config-reference#multiple-files)。
