--- a/用户指南/11.扩展库.md
+++ b/用户指南/11.扩展库.md
@@ -4,14 +4,14 @@
 
 PHPStan 的特色是有能力定义和检查类的"魔术(magic)"行为 —— 访问类中未定义但在 `__get` 和 `__set` 创建的属性，和使用 `__call` 调用的方法。
 
-PHPStan 不仅允许为非客观错误或代码里的其他问题编写自定义的规则，也允许人们避免一些微妙的情况合作或者强制执行他们想要的编码方式。这些自定义规则利用了抽象语法树，额外的类型接口引擎，PHPDoc 解析器和类反射数据。
+PHPStan 不仅允许为非客观错误或代码里的其他问题编写自定义的规则，也允许人们避免一些微妙的情况或者强制执行他们想要的编码方式。这些自定义规则利用了抽象语法树，额外的类型接口引擎，PHPDoc 解析器和类反射数据。
 
-[了解更多关于编写自定义扩展 »](/developing-extensions/extension-types)
+[了解更多关于编写自定义扩展 »](https://phpstan.org/developing-extensions/extension-types)
 
 安装扩展
 -------------------------
 
-用户可以安装大量的 PHPStan 扩展来增强静态分析器的能力。很多扩展已经支持 [phpstan 扩展安装器](https://github.com/phpstan/extension-installer) Composer 插件，因此为了启用一个扩展，在你的 `composer.json` 文件引入它就足够了：
+用户可以安装大量的 PHPStan 扩展来增强静态分析器的能力。很多扩展已经支持 [PHPStan 扩展安装器](https://github.com/phpstan/extension-installer) Composer 插件，因此为了启用一个扩展，在你的 `composer.json` 文件引入它就足够了：
 
 ```bash
 composer require --dev phpstan/extension-installer && \
@@ -25,7 +25,7 @@ includes:
 	- vendor/phpstan/phpstan-beberlei-assert/extension.neon
 ```
 
-> **为什么我不想总是使用[phpstan扩展安装器](https://github.com/phpstan/extension-installer)？**
+> **为什么我不想总是使用[PHPStan 扩展安装器](https://github.com/phpstan/extension-installer)？**
 >
 > 它总是启用拓展提供的所有功能。例如如果你只想使用 [phpstan-strict-rules](https://github.com/phpstan/phpstan-strict-rules) 的某些规则，或者你只想使用 [phpstan-doctrine](https://github.com/phpstan/phpstan-doctrine) 的 `extension.neon` （而不是 `rules.neon`），你无法使用扩展安装器，只能手动引入所选文件。
 
@@ -33,11 +33,11 @@ includes:
 官方扩展
 ---------------
 
-查看 [phpstan-strict-rules](https://github.com/phpstan/phpstan-strict-rules) 仓库可以了解 PHPStan 更多的严格性和偏执的规则。
+查看 [phpstan-strict-rules](https://github.com/phpstan/phpstan-strict-rules) 仓库可以了解 PHPStan 特别严格和偏执的规则。
 
-查看 [phpstan-deprecation-rules](https://github.com/phpstan/phpstan-deprecation-rules) 可以了解检测弃用类、方法、属性、常量和 trait的用法规则。
+查看 [phpstan-deprecation-rules](https://github.com/phpstan/phpstan-deprecation-rules) 可以了解检测弃用类、方法、属性、常量和 trait 的用法规则。
 
-### Framework 指定的扩展
+### 特定框架的扩展
 
 * [Doctrine](https://github.com/phpstan/phpstan-doctrine)
 * [PHPUnit](https://github.com/phpstan/phpstan-phpunit)
