--- a/用户指南/12.向后兼容承诺.md
+++ b/用户指南/12.向后兼容承诺.md
@@ -11,17 +11,17 @@
 CLI 参数和选项
 --------------------
 
-[它们的含义](/user-guide/command-line-usage) 在 次要/补丁版本不会更改。不会移除旧选项，可以添加新选项。
+[它们的含义](/用户指南/02.命令行用法.md) 在次要/补丁版本不会更改。不会移除旧选项，可以添加新选项。
 
 配置选项
 --------------------
 
-现有 [配置选项](/config-reference) 的含义和文件格式在次要/补丁版本中不会更改。不会移除旧选项，可以添加新选项。
+现有 [配置选项](https://phpstan.org/config-reference) 的含义和文件格式在次要/补丁版本中不会更改。不会移除旧选项，可以添加新选项。
 
 对分析代码执行的检查
 --------------------
 
-分析代码执行规则的库，以及 [规则级别](/user-guide/rule-levels) 的含义在次要/补丁版本不会更改。这意味着 PHPStan 在次要/补丁版本不会出现新的错误种类。新规则仅被添加在主要版本，也作为[前沿功能](/blog/what-is-bleeding-edge)的一部分。前沿功能会在下个主要版本视情况加入。
+分析代码执行规则的库，以及 [规则级别](/用户指南/03.规则级别.md) 的含义在次要/补丁版本不会更改。这意味着 PHPStan 在次要/补丁版本不会出现新的错误种类。新规则仅被添加在主要版本，也作为[前沿功能](/blog/what-is-bleeding-edge)的一部分。前沿功能会在下个主要版本视情况加入。
 
 类型推断能力
 --------------------
@@ -31,7 +31,7 @@ CLI 参数和选项
 
 最小化类型推断变化的影响
 --------------------
-当 PHPStan 停止报告假阳性时，它会报告不再存在的 [忽略错误](/user-guide/ignoring-errors) 。所以升级次要/补丁版本失败的情况中，有一半可以通过设置 [`reportUnmatchedIgnoredErrors`](/user-guide/ignoring-errors#reporting-unused-ignores) 为 `false` 来解决。
+当 PHPStan 停止报告假阳性时，它会报告不再存在的 [忽略错误](/用户指南/07.忽略错误.md) 。所以升级次要/补丁版本失败的情况中，有一半可以通过设置 [`reportUnmatchedIgnoredErrors`](/用户指南/07.忽略错误.md#reporting-unused-ignores) 为 `false` 来解决。
 
 用户通常欢迎 PHPStan 变得更聪明，因此在 `composer.json` 文件使用 [脱字符版本范围](https://getcomposer.org/doc/articles/versions.md#caret-version-range-)（例如 `"phpstan/phpstan": "^0.12.82"`）是被鼓励的。配合 [提交到版本库的 `composer.lock`](https://www.amitmerchant.com/why-you-should-always-commit-the-composer-lock-file/) 你的构建不管怎样都会是稳定的，当你运行 `composer update` 时才会升级 PHPStan 的新版本。
 
