--- a/用户指南/07.忽略错误.md
+++ b/用户指南/07.忽略错误.md
@@ -6,11 +6,11 @@
 
 * 这个报错是一个真正的问题，但你当前没有时间去重写代码库来解决。
 * 必须重写 PHPStan 才能使它理解代码的作用但是现在选择不这么做。
-* 这是一个真正的 PHPStan bug 但你不想（也不需要）总等着一个 bugix。
+* 这确实是一个 PHPStan 的漏洞，但你不想（也不需要）等待官方修复它。
 
 请注意一些严重的报错（例如自动加载问题、父类不存在、解析错误等等）不能被忽略，必须在运行 PHPStan 时全部解决。
 
-关于 PHPDocs 的忽略用法
+使用 PHPDocs 忽略报错
 -------------------
 
 在错误代码旁加上 PHPDoc 标记的注释可以使报错被忽略：
@@ -39,10 +39,10 @@ function () {
 };
 ```
 
-配置文件的忽略
+利用配置文件忽略报错
 -------------------
 
-在 [配置文件](/config-reference) 的 `ignoreErrors` 键里添加正则表达式可以忽略某些错误。要在整个项目通过正则表达式忽略一个错误，可以添加一个字符串条目：
+在 [配置文件](https://phpstan.org/config-reference) 的 `ignoreErrors` 键里添加正则表达式可以忽略某些错误。要在整个项目通过正则表达式忽略一个错误，可以添加一个字符串条目：
 
 ```yaml
 parameters:
@@ -76,29 +76,29 @@ parameters:
 生成一个 ignoreErrors 条目
 ------------------
 
-这个有用的工具可以生成一个你可以把它放在 [配置文件](/config-reference) 的 `parameters.ignoreErrors` 选项的条目。它处理了直接用字符串写正则表达式，并把表达式编码成 neon 格式的复杂性。
+这个有用的工具可以生成一个你可以把它放在 [配置文件](https://phpstan.org/config-reference) 的 `parameters.ignoreErrors` 选项的条目。它处理了直接用字符串写正则表达式，并把表达式编码成 neon 格式的复杂性。
 
-译者注：这里原网页给了一个工具(ignoreErrorsWidget.njk)的示例。
+注：这里原网页给了一个工具的[示例](https://phpstan.org/user-guide/ignoring-errors#generate-an-ignoreerrors-entry)。
 
 基线
 ------------------
 
-如果从现在开始你想忽略所有的当前错误并关注新的和有改动的代码，[请移步了解基线](/user-guide/baseline) 。
+如果从现在开始你想忽略所有的当前错误并关注新的和有改动的代码，[请移步了解基线](/用户指南/04.基线.md) 。
 
 报告无用的忽略
 ------------------
 
-如果一些被忽略的报错（来自配置文件 和 PHPDocs）不会再出现，PHPStan 会通知你去移除这些忽略配置。你可以通过在配置中设置 `reportUnmatchedIgnoredErrors` 为 `false` 来关闭这种行为。
+如果一些被忽略的报错（来自配置文件 和 PHPDocs）不会再出现，PHPStan 会通知你去移除它们。你可以通过在配置中设置 `reportUnmatchedIgnoredErrors` 为 `false` 来关闭这种行为。
 
 ```yaml
 parameters:
 	reportUnmatchedIgnoredErrors: false
 ```
 
-排除整个文件
+排除文件
 ------------------
 
-如果你的代码库包含一些有意损坏的文件（例如，为了测试您的 APP 在具有无效 PHP 代码文件上的行为）， 你可以用 `excludePaths` 键来排除它们，每个条目都符合 [`fnmatch()`](https://www.php.net/manual/en/function.fnmatch.php) 函数的模式。
+如果你的代码库包含一些有意损坏的文件（例如，为了测试您的 APP 在具有无效 PHP 代码文件上的行为），你可以用 `excludePaths` 键来排除它们，每个条目都符合 [`fnmatch()`](https://www.php.net/manual/en/function.fnmatch.php) 函数的模式。
 
 ```yaml
 parameters:
@@ -115,7 +115,7 @@ parameters:
 		    - tests/*/data/*
 ```
 
-如果你的项目目录结构混合了你自己的代码（你想要分析和修复）和第三方的代码（你用来[定位符号](https://phpstan.org/user-guide/discovering-symbols)，但不想分析)，文件结构可能是这样的：
+如果你的项目目录结构混合了你自己的代码（想要分析和修复）和第三方的代码（你用来[定位符号](https://phpstan.org/用户指南/05.定位符号.md)，但不想分析)，文件结构可能是这样的：
 
 ```
 ├── phpstan.neon
