--- a/用户指南/08.存根文件.md
+++ b/用户指南/08.存根文件.md
@@ -2,21 +2,21 @@
 存根文件
 ---
 
-PHPStan 在分析和使用代码时依赖 [PHPDocs](/writing-php-code/phpdocs-basics) 。你可能在 `vendor/` 目录遇到一个不精确的 PHPDoc，从而在你的项目里引发一个误报。
+PHPStan 在分析和使用代码时依赖 [PHPDocs](https://phpstan.org/writing-php-code/phpdocs-basics) 。你可能在 `vendor/` 目录遇到一个不准确的 PHPDoc，从而在你的项目里引发一个误报。
 
-为了减缓这种情况，你可以用正确的 PHPDoc 语法编写一个存根文件。就像源码一样，但是 PHPStan 只从中读取 PHPDocs。 因此命名空间(namespace) 和 class/interface/trait/method/function 的名字必须匹配你描述的源码。但是方法(method) 体可以为空， PHPStan 只对 PHPDocs 感兴趣。可以参考 [PHPStan 的存根文件](https://github.com/phpstan/phpstan-src/tree/1.8.x/stubs) 或者 [phpstan-doctrine 拓展的存根文件](https://github.com/phpstan/phpstan-doctrine/tree/1.3.x/stubs).
+为了减少这种情况，你可以用正确的 PHPDoc 语法编写一个存根文件。就像源码一样，但是 PHPStan 只从中读取 PHPDocs。 因此命名空间(namespace) 和 class/interface/trait/method/function 的名字必须匹配你描述的源码。但是方法(method)体可以为空，PHPStan 只对 PHPDocs 感兴趣。可以参考 [PHPStan 的存根文件](https://github.com/phpstan/phpstan-src/tree/1.8.x/stubs) 或者 [phpstan-doctrine 拓展的存根文件](https://github.com/phpstan/phpstan-doctrine/tree/1.3.x/stubs).
 
-存根文件不能代替 [定位符号](/user-guide/discovering-symbols) 因此如果你想修复 "Function not found" 或 "Class not found" 这种报错，可以看看 [定位符号](/user-guide/discovering-symbols) 手册。
+存根文件不能代替 [定位符号](/用户指南/05.定位符号.md) 因此如果你想修复 "Function not found" 或 "Class not found" 这种报错，可以看看 [定位符号](/用户指南/05.定位符号.md) 手册。
 
 
 > **关于存根文件的分析**
 >
 > 存根文件不需要被被添加到分析路径。它们被你选的规则级别独立分析，这套规则主要评估 PHPDoc 的良好格式性。
 >
-> 存根文件中的报错也不能被忽略，所有的都必须解决。
+> 存根文件中的报错也不能被忽略，所有的报错都必须解决。
 
 
-存根文件需要被添加在 [配置文件](/config-reference) 的 `stubFiles` 键：
+存根文件需要被添加在 [配置文件](https://phpstan.org/config-reference) 的 `stubFiles` 键：
 
 ```yaml
 parameters:
@@ -25,7 +25,7 @@ parameters:
 		- stubs/Bar.stub
 ```
 
-它支持任何你喜欢的文件拓展名， 但是为了不困扰你的 IDE，建议使用 `.stub` 而不是 `.php`。
+它支持任何你喜欢的文件拓展名，但是为了不困扰你的 IDE，建议使用 `.stub` 而不是 `.php`。
 
 `stubFiles` 键指定的相对路径会基于配置文件所在位置解析。
 
