--- a/用户指南/10.结果缓存.md
+++ b/用户指南/10.结果缓存.md
@@ -1,11 +1,11 @@
 ---
 结果缓存
 ---
-PHPStan 会缓存分析结果，因此后续运行速度更快。你应该始终分析整个项目 —— 传给 [`analyse` 命令](/user-guide/command-line-usage) 的路径列表每次应该相同以利用结果缓存。如果每次运行的的路径不同，则会完全重建缓存。
+PHPStan 会缓存分析结果，因此后续运行速度更快。你应该始终分析整个项目 —— 传给 [`analyse` 命令](/用户指南/02.命令行用法.md) 的路径列表每次应该相同以便利用缓存。如果每次运行的的路径不同，则会完全重建缓存。
 
-> 你可能注意到结果缓存有时不会被保存，即使上次 PHPStan 运行后什么都没改变它也会进行完整分析。如果分析结果包含某些严重的错误，例如解析错误, 结果缓存不会被用于下次运行，因为文件依赖树可能会不完整。
+> 你可能注意到结果缓存有时不会被保存，即使上次 PHPStan 运行后什么都没改变它也会进行完整分析。如果分析结果包含某些严重的错误，例如解析错误，缓存不会被用于下次运行，因为文件依赖树可能会不完整。
 
-结果缓存被保存在 `%tmpDir%/resultCache.php`。[了解更多关于 `tmpDir` 配置 »](/config-reference#caching)
+结果缓存被保存在 `%tmpDir%/resultCache.php`。[了解更多关于 `tmpDir` 配置 »](https://phpstan.org/config-reference#caching)
 
 结果缓存内容
 --------------
@@ -15,19 +15,19 @@ PHPStan 会缓存分析结果，因此后续运行速度更快。你应该始终
   * PHPStan 版本
   * PHP 版本
   * 已加载的 PHP 拓展
-  * [规则级别](/user-guide/rule-levels)
-  * [配置文件](/config-reference) 哈希
+  * [规则级别](/用户指南/03.规则级别.md)
+  * [配置文件](https://phpstan.org/config-reference) 哈希
   * 分析路径
   * `composer.lock` 文件哈希
-  * [存根文件](/user-guide/stub-files) 哈希
-  * [引导启动文件](/config-reference#bootstrap) 哈希
-  * [自动加载文件](/user-guide/command-line-usage#--autoload-file%7C-a) 哈希
+  * [存根文件](/用户指南/08.存根文件.md) 哈希
+  * [引导启动文件](https://phpstan.org/config-reference#bootstrap) 哈希
+  * [自动加载文件](/用户指南/02.命令行用法.md#--autoload-file%7C-a) 哈希
 * 最近一次运行的报错
-* 项目文件的依赖树。如果文件 `A.php` 上次运行后被修改了，所有调用 `A.php` 的文件，或者 在 `A.php` 引用的所有符号(symbols) 会被再次分析。
+* 项目文件的依赖树。如果文件 `A.php` 上次运行后被修改了，所有调用 `A.php` 的文件，或者 在 `A.php` 引用的所有符号(symbol) 会被再次分析。
 
 清理结果缓存
 ---------------
 
-为了清理结果缓存的当前状态，例如你在开发 [自定义拓展](/developing-extensions/extension-types) 但结果缓存太老了，你可以运行 `clear-result-cache` 命令。[了解更多 »](/user-guide/command-line-usage#clearing-the-result-cache)
+为了清理结果缓存的当前状态，例如你在开发 [自定义扩展](https://phpstan.org/developing-extensions/extension-types) 但结果缓存太老了，你可以运行 `clear-result-cache` 命令。[了解更多 »](/用户指南/02.命令行用法.md#clearing-the-result-cache)
 
-当使用 [`--debug`](/user-guide/command-line-usage#--debug) 运行时结果缓存也会失效。
+当使用 [`--debug`](/用户指南/02.命令行用法.md#--debug) 运行时结果缓存也会失效。
